--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Build
       run: dotnet build ./dotnet --configuration Release --no-restore
     - name: Create docker iamge
-      run: docker build ./dotnet/Dockerfile
+      run: docker build ./dotnet
     - name: Push docker image
       uses: kciter/aws-ecr-action@v1
       with:
