--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -38,3 +38,4 @@ jobs:
         repo: branch-dotnet-services
         region: eu-west-2
         tags: latest,${{ github.sha }},${{ steps.branch_name.outputs.branch }}
+        path: ./dotnet/Dockerfile
