--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,11 +27,12 @@ jobs:
       run: dotnet restore ./dotnet
     - name: Build
       run: dotnet build ./dotnet --configuration Release --no-restore
-    - run: docker build --tag ${{ steps.branch_name.outputs.branch }} ./dotnet
+    - run: docker build --tag yaboi ./dotnet
     - name: Push to ECR
       uses: jwalton/gh-ecr-push@v1
       with:
         access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         region: eu-west-2
+        local-image: yaboi
         image: branch-dotnet-services:${{ steps.branch_name.outputs.branch }}
